Bug  1797991: update z-index of btn-group-top
we have to set z-index of btn-group-top
to be over .inner-link elements
like .custom-dropdown does

behatnotneeded

--- a/htdocs/theme/raw/sass/components/_btn.scss
+++ b/htdocs/theme/raw/sass/components/_btn.scss
@@ -131,7 +131,7 @@ h1 ~ div > .btn-group-top,
 
 .btn-group-top {
     position: relative;
-    z-index: 3;
+    z-index: 4;
     @media (min-width: $screen-xs-min) {
         float: right;
         .btn {
